fix: Mise à jour des références de documents et amélioration de la gestion des noms de fichiers - Mise à jour des références de documents dans les modèles et les templates pour utiliser 'str_lien' au lieu de 'lien'. - Ajout de la sécurisation des noms de fichiers lors de la création et du téléchargement. - Correction de la création des noms de fichiers pour inclure un préfixe 'F' et sécuriser les noms.

--- a/app/templates/contrat_detail.html
+++ b/app/templates/contrat_detail.html
@@ -225,8 +225,8 @@
                                         <td class="align-middle">{{ bill['titre_facture'] }}</td>
                                         <td class="align-middle">{{ bill['montant'] }} €</td>
                                         <td class="align-middle">
-                                            <a href="{{ url_for('contracts_bp.download_document', name=bill['lien']) }}" target="_blank">
-                                                {{ bill['lien'] }}
+                                            <a href="{{ url_for('contracts_bp.download_document', name=bill['str_lien']) }}" target="_blank">
+                                                {{ bill['str_lien'] }}
                                             </a>
                                         </td>
                                         <td class="align-middle">
