Ajout de la balise meta viewport pour améliorer la réactivité du modèle de courriel HTML

--- a/app/templates/mail_echeance.html
+++ b/app/templates/mail_echeance.html
@@ -17,6 +17,7 @@ Il inclut une table formatée pour afficher les détails des contrats, ainsi que
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liste des contrats à renégocier</title>
     <style>
         body {
