Ajout de la gestion du token API pour l'accès aux rapports et amélioration des logs d'envoi d'e-mails Amélioration du mail à partir d'un template HTML Ajout de la relecture des variables d'environnement avant chaque requête pour s'assurer que les dernières valeurs sont utilisées Ajout d'exemples de commandes curl pour l'appel des rapports avec le token API

--- a/app/templates/mail_echeance.html
+++ b/app/templates/mail_echeance.html
@@ -96,6 +96,7 @@ Il inclut une table formatée pour afficher les détails des contrats, ainsi que
         }
         tr:hover td {
             background: #e3eef7;
+            color: #17455c;
         }
         td {
             border-bottom: 1px solid #e0e6ed;
